--- a/src/package.json
+++ b/src/package.json
@@ -7,6 +7,7 @@
   "devDependencies": {
     "requirejs": "2.3.5",
     "requirejs-text": "2.0.12",
-    "monaco-editor": "0.13.1"
+    "monaco-editor": "0.13.1",
+    "mocha": "5.2.0"
   }
 }
