--- a/src/sqlcode/sqlcode.csproj
+++ b/src/sqlcode/sqlcode.csproj
@@ -9,6 +9,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="LiteDB" Version="4.1.3" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
   </ItemGroup>
 
