Update scripts backend service implementation

--- a/src/sqlcode/appsettings.Development.json
+++ b/src/sqlcode/appsettings.Development.json
@@ -2,8 +2,15 @@
   "Logging": {
     "LogLevel": {
       "Default": "Debug",
-      "System": "Information",
-      "Microsoft": "Information"
+      "System": "Warning",
+      "Microsoft": "Warning",
+      "LiteDB": "Debug"
     }
+  },
+  "App": {
+    "LocalStoreConnectionString": "local.db",
+    "LocalStoreLogLevel": "FULL",
+    "LocalStoreLogType": "Information",
+    "DiagnosticPath": "/diagnostic"
   }
 }
