--- a/src/sqlcode/appsettings.json
+++ b/src/sqlcode/appsettings.json
@@ -4,5 +4,11 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "App": {
+    "LocalStoreConnectionString": "local.db",
+    "LocalStoreLogLevel": null,
+    "LocalStoreLogType": null,
+    "DiagnosticPath": null
+  } 
 }
