Add api controller test

--- a/src/sqlcode/appsettings.Development.json
+++ b/src/sqlcode/appsettings.Development.json
@@ -8,8 +8,7 @@
     }
   },
   "App": {
-    "LocalStoreConnectionString": "local.db",
-    "LocalStoreLogLevel": "FULL",
+    "LocalStoreLogLevel": "COMMAND,QUERY",
     "LocalStoreLogType": "Information",
     "DiagnosticPath": "/diagnostic"
   }
