--- a/src/sqlcode/appsettings.json
+++ b/src/sqlcode/appsettings.json
@@ -6,9 +6,6 @@
   },
   "AllowedHosts": "*",
   "App": {
-    "LocalStoreConnectionString": "local.db",
-    "LocalStoreLogLevel": null,
-    "LocalStoreLogType": null,
-    "DiagnosticPath": null
+    "LocalStoreConnectionString": "local.db"
   } 
 }
