move test projects to test dir

--- a/test/IntegrationTests/IntegrationTests.csproj
+++ b/test/IntegrationTests/IntegrationTests.csproj
@@ -17,7 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\sqlcode\sqlcode.csproj" />
+    <ProjectReference Include="..\..\src\sqlcode\sqlcode.csproj" />
   </ItemGroup>
 
 </Project>
