--- a/test/UnitTests/UnitTests.csproj
+++ b/test/UnitTests/UnitTests.csproj
@@ -15,7 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\sqlcode\sqlcode.csproj" />
+    <ProjectReference Include="..\..\src\sqlcode\sqlcode.csproj" />
   </ItemGroup>
 
 </Project>
