fix AspNetCore version in csproj

--- a/src/sqlcode/sqlcode.csproj
+++ b/src/sqlcode/sqlcode.csproj
@@ -2,7 +2,6 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.1</TargetFramework>
-    <UserSecretsId>10e1d7ae-7f1b-4892-acce-fba7fe774821</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
@@ -13,7 +12,7 @@
     <PackageReference Include="AutoMapper" Version="7.0.1" />
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="4.0.1" />
     <PackageReference Include="LiteDB" Version="4.1.4" />
-    <PackageReference Include="Microsoft.AspNetCore.App" />
+    <PackageReference Include="Microsoft.AspNetCore.App" Version="2.1.1" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.1.0" />
     <PackageReference Include="Npgsql" Version="4.0.0" />
     <PackageReference Include="Npgsql.Json.NET" Version="1.0.0" />
